@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#2531] Feature: Enhance the mailer classes to also be able to add attachments
 - [#2623] Feature: Adapt the Mailer classes to send a Mail object
 - [#2356] Feature: The data mapper should also load hidden records
 - [#788] Fix: Use t3lib_div::trimExplode instead of explode
